@@ -1,5 +1,6 @@
 Canta 0.2-rc2
 
+* fixes songeditor help
 * point to the canta-media 0.2-rc1 version (in git-tree)
 * dates in changelog
 
